assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Patua+One&family=Roboto:wght@300&display=swap');

:root {
    --scarlet: #F53519ff;
    --cambridge-blue: #7AB2A9ff;
    --sandy-brown: #FBAA69ff;
    --bone: #E2DBC9ff;
    --space-cadet: #0D2656ff;
    --giants-orange: #F8682Bff;
    --lapis-lazuli: #04668Dff;
    --wheat: #F4DBAFff;
    --indigo-dye: #0A446Fff;
    --cerulean: #086D90ff;
    font-family: 'Patua One', serif;
    font-family: 'Roboto', sans-serif
}


* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "";
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    /* background-color: #E2DBC9ff;  */
    background-image: url("https://i.postimg.cc/7L7rt5Qg/rainbow-background.jpg"); /* The image used */
    background-color: #cccccc; /* Used if the image is unavailable */
    height: 500px; /* You must set a specified height */
    background-position: center; /* Center the image */
    background-repeat: no-repeat; /* Do not repeat the image */
    background-size: cover; /* Resize the background image to cover the entire container */  
}

main {
    display: flex; 
    flex: 1 0 auto; 
    align-items: center; 
}

#game-area {
    display: flex;
    flex-direction: column;
    /* flex: 1 0 auto;  */
    align-items: center;
    justify-content: center;
    background-color: #086D90;
    padding: 4rem;
    min-width: 20rem;
    max-width: 20rem; 
    /*to stop the cards from changing size with different words*/
    /* Setting min and max width works but not responsive */
    /* All boxes are jumping around during gameplay - want all fixed. */
    max-height: 20rem;
    min-height: 20rem; 
    border-radius: 5px;
}

/*Need to wrap contents of game area in div and space out*/

#heading-wordscramble {
    color: white;  
    font-size: 1.8rem; 
    text-align: center; 
    position: absolute; 
    margin-top: -13rem;
    padding-bottom: 1.4rem;
}

/* .div-rules {
    /* width: 40vw;  */
     
 
ul {
    color: white;  
    list-style-type: none;  
    font-family: 'Patua One', serif;
    font-size: 0.9rem;
    padding-top: 2.4rem;
    padding-bottom: 2rem;
    
}

li {
    font-family: 'Patua One', serif;
    padding: 0.3rem;
}

.div-scoreboard {
    color: white; 
    margin: 5px 5px; 
    letter-spacing: 0.1rem;
    font-family: 'Patua One', serif, 300;
}


/* Varied by changing CSS from tutorial  */
.btn-start {
    border-radius: 5px;
    border: none;
    padding: 0.75rem;
    margin: 5px 5px;
    width: 14rem;
    height: 4rem; 
    font-size: 1.2rem;
    font-family: 'Patua One', serif;
    color: #0D2656; 
    /* border: solid 8px #e76f51; */
}

button {
cursor:pointer;
}

/* To add hover color change to button */
.btn-start:hover, #btn-refresh:hover {
    background-color: #fdeda8; 
}

/* Create and style refresh button */
#btn-refresh  {
    border-radius: 4px; 
    border: none; 
    padding: 0.35rem;
    margin: 5px 5px; 
    font-family: 'Patua One', serif;
    font-size: 1rem;
    color: #0D2656ff; 
}

.div-played-words {
    background-color: #7AB2A9;
    font-size: 2rem; 
    border-radius: 5px; 
    width: 14rem;
    letter-spacing: 0.3rem;
    text-align: center; 
    position: relative; 
    padding: 0.5rem;
    margin: 5px 5px; 
    font-family: 'Patua One', serif, 400;
}

/* input:focus, textarea:focus, select:focus{
    outline: none;
} */

/* Stopped all from jumping around by making input
 same size a button - padding, margin and width */
.input-text {
    letter-spacing: 0.3rem;
    width: 14rem;    
    font-size: 1.5rem;
    text-align: center; 
    border-radius: 5px;
    padding: 0.6rem;
    margin: 5px 5px;   
    overflow: hidden; 
    font-family: 'Roboto', sans-serif;
    font-weight: 300; 
}

.input-text::placeholder {
    font-size: 0.5rem; 
    text-align: center; 
    letter-spacing: 0rem;   
    padding-top: 1rem; 
}

.div-gameover {
    font-size: 1.4rem; 
    color: white; 
    font-family: 'Patua One', serif, 400;   
}

.footer__link  {
    background-color: #0A446F;
    width: 100vw; 
    display: flex; 
    justify-content: center; 
    align-items: center; 
}

footer a, footer i { 
    background-color: #0A446F; 
    font-size: 0.8rem;
    font-family: 'Roboto', sans-serif;
    color: white; 
    padding: 0.4rem;
    text-decoration: none; 
}

